--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <artifactId>joda-time</artifactId>
             <version>2.3</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.ocpsoft.prettytime</groupId>
+            <artifactId>prettytime</artifactId>
+            <version>3.2.5.Final</version>
+        </dependency>
             
         <dependency>
             <groupId>org.imgscalr</groupId>
