--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -2,7 +2,10 @@ adminClippings=Administrar Respuestas Predefinidas
 clippingDesc=Respuesta Predefinida
 clippingHelp=Guarda y administra el texto de respuestas predefinidas que usas con frecuencia para despu\u00e9s pegar en respuestas al cliente o comentarios internos del caso. <br/>La ventaja de una respuesta predefinida es que al seleccionar una esta Pegar\u00e1 en el cuadro de respuesta el texto reemplazando las variables del caso en proceso por los datos deseados con s\u00f3lo un clic, lo que elimina la molestia de tener que volver a escribir o copiar/pegar texto y datos repetitivos.
 
-cambiarSLA=Cambiar SLA caso
+visibleAlCliente=Visible al cliente
+textoPredefinido=Respuesta r\u00e1pida
+cambiarSLA=Cambiar SLA
+adjuntarArchivosARespuesta=Adjuntar Archivos (S\u00f3lo si se env\u00eda respuesta al cliente)
 cambiarSubEstado=Cambiar Estado del caso
 inbox=/script/index.xhtml
 PersistenceErrorOccured=Lo sentimos, ha ocurrido un error interno, favor notificar de este problema al administrador.
