--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -22,11 +22,27 @@ org.quartz.threadPool.threadPriority = 3
 
 org.quartz.jobStore.misfireThreshold = 60000
 
-org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
+#============================================================================
+#JobStoreCMT relies upon transactions being managed by the application which is using Quartz. 
+#A JTA transaction must be in progress before attempt to schedule (or unschedule) jobs/triggers. 
+#This allows the "work" of scheduling to be part of the applications "larger" transaction. 
+#JobStoreCMT actually requires the use of two datasources - one that has it's connection's 
+#transactions managed by the application server (via JTA) and one datasource that has connections 
+#that do not participate in global (JTA) transactions. 
+#JobStoreCMT is appropriate when applications are using JTA transactions (such as via EJB Session Beans) to perform their work.
+org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreCMT
+#============================================================================
+
 org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
+#============================================================================
+# The "org.quartz.jobStore.useProperties" config parameter can be set to "true" (defaults to false) in order to instruct JDBCJobStore 
+#that all values in JobDataMaps will be Strings, and therefore can be stored as name-value pairs, rather than storing more complex objects 
+#in their serialized form in the BLOB column. This is much safer in the long term, as you avoid the class versioning issues that there 
+#are with serializing your non-String classes into a BLOB.
 org.quartz.jobStore.useProperties = true
-org.quartz.jobStore.dataSource = nonManagedTXDS
-#org.quartz.jobStore.nonManagedTXDataSource = nonManagedTXDS
+#============================================================================
+org.quartz.jobStore.dataSource = godeskds
+org.quartz.jobStore.nonManagedTXDataSource = nonManagedTxDs
 org.quartz.jobStore.tablePrefix = QRTZ_
 
 org.quartz.jobStore.isClustered = true
@@ -37,16 +53,5 @@ org.quartz.jobStore.clusterCheckinInterval = 60000
 # Configure Datasources  
 #============================================================================
 
-#org.quartz.dataSource.nonManagedTXDS.driver = org.postgresql.Driver
-#org.quartz.dataSource.nonManagedTXDS.URL = jdbc:postgresql://localhost:5432/helpdesk_db
-#org.quartz.dataSource.nonManagedTXDS.user = postgres
-#org.quartz.dataSource.nonManagedTXDS.password = postgres
-#org.quartz.dataSource.nonManagedTXDS.maxConnections = 17
-#org.quartz.dataSource.nonManagedTXDS.validationQuery=select version()
-
-#org.quartz.dataSource.godeskds.jndiURL=jdbc/godesk_db_ds
-org.quartz.dataSource.nonManagedTXDS.jndiURL=jdbc/brotecnonManagedTXDS
-#org.quartz.dataSource.godeskds.java.naming.factory.initial=com.evermind.server.rmi.RMIInitialContextFactory
-#org.quartz.dataSource.godeskds.java.naming.provider.url=ormi://localhost
-#org.quartz.dataSource.godeskds.java.naming.security.principal=admin
-#org.quartz.dataSource.godeskds.java.naming.security.credentials=admin
+org.quartz.dataSource.nonManagedTxDs.jndiURL=jdbc/brotecnonManagedTXDS
+org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
