--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -30,7 +30,9 @@ org.quartz.jobStore.misfireThreshold = 60000
 #transactions managed by the application server (via JTA) and one datasource that has connections 
 #that do not participate in global (JTA) transactions. 
 #JobStoreCMT is appropriate when applications are using JTA transactions (such as via EJB Session Beans) to perform their work.
-org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreCMT
+#org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreCMT
+#JobStoreTX
+org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
 #============================================================================
 
 org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
@@ -42,7 +44,7 @@ org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.PostgreSQ
 org.quartz.jobStore.useProperties = true
 #============================================================================
 org.quartz.jobStore.dataSource = godeskds
-org.quartz.jobStore.nonManagedTXDataSource = nonManagedTxDs
+#org.quartz.jobStore.nonManagedTXDataSource = nonManagedTxDs
 org.quartz.jobStore.tablePrefix = QRTZ_
 
 org.quartz.jobStore.isClustered = true
@@ -53,5 +55,5 @@ org.quartz.jobStore.clusterCheckinInterval = 60000
 # Configure Datasources  
 #============================================================================
 
-org.quartz.dataSource.nonManagedTxDs.jndiURL=jdbc/brotecnonManagedTXDS
+#org.quartz.dataSource.nonManagedTxDs.jndiURL=jdbc/brotecnonManagedTXDS
 org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
