improvements: - agenda - reglas - clientes

--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -31,7 +31,11 @@ org.quartz.jobStore.misfireThreshold = 60000
 #that do not participate in global (JTA) transactions. 
 #JobStoreCMT is appropriate when applications are using JTA transactions (such as via EJB Session Beans) to perform their work.
 #org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreCMT
-#JobStoreTX
+#===
+#JobStoreTX manages all transactions itself by calling commit() (or rollback()) on the database 
+#connection after every action (such as the addition of a job). JDBCJobStore is appropriate if 
+#you are using Quartz in a stand-alone application, 
+#or within a servlet container if the application is not using JTA transactions.
 org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
 #============================================================================
 
