--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <distributable/>
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
@@ -10,23 +10,32 @@
         <param-value>.xhtml</param-value>
     </context-param>
     
+    <!--context-param>
+        <param-name>primefaces.PUSH_SERVER_URL</param-name>
+        <param-value>http://127.0.0.1:8080</param-value>
+    </context-param-->
+    
     <filter>
         <filter-name>LoginFilter</filter-name>
         <filter-class>com.itcs.helpdesk.jsfcontrollers.util.LoginFilter</filter-class>
+        <async-supported>true</async-supported>
     </filter>
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <filter-class>
             org.primefaces.webapp.filter.FileUploadFilter
         </filter-class>
+        <async-supported>true</async-supported>
     </filter>
     <filter>
         <filter-name>Character Encoding Filter</filter-name>
         <filter-class>com.itcs.helpdesk.util.CharacterEncodingFilter</filter-class>
+        <async-supported>true</async-supported>
     </filter>
     <filter>
         <filter-name>ClientAgentDetectorFilter</filter-name>
         <filter-class>com.itcs.helpdesk.util.ClientAgentDetectorFilter</filter-class>
+        <async-supported>true</async-supported>
         <init-param>
             <param-name>loginPage</param-name>
             <param-value>/faces/script/login.xhtml</param-value>
@@ -36,10 +45,24 @@
             <param-value>/faces/mobile/login.xhtml</param-value>
         </init-param>
     </filter>
+    
+    <servlet>
+        <servlet-name>Push Servlet</servlet-name>
+        <servlet-class>org.primefaces.push.PushServlet</servlet-class>
+        <load-on-startup>0</load-on-startup>
+        <async-supported>true</async-supported>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Push Servlet</servlet-name>
+        <url-pattern>/primepush/*</url-pattern>
+    </servlet-mapping>
+
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
+        <async-supported>true</async-supported>
     </servlet>
     <servlet>
         <servlet-name>TagListServlet</servlet-name>
