finishing merge master

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -462,6 +462,7 @@ CreateProductoLabel_nombre=Nombre:
 ProductoTitle_nombre=Nombre
 CreateProductoLabel_descripcion=Descripci\u00f3n:
 ProductoTitle_descripcion=Descripci\u00f3n
+CreateProductoTitle=Nuevo
 
 CreateCasoLabel_idComponente=Componente:
 CreateCasoTitle_idComponente=Componente
