added default timeouts working on new branch aiming for godesk

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,3 +1,6 @@
+Cancel=Cancelar
+Save=Guardar
+
 adminClippings=Administrar Respuestas Predefinidas
 clippingDesc=Respuesta Predefinida
 clippingHelp=Guarda y administra el texto de respuestas predefinidas que usas con frecuencia para despu\u00e9s pegar en respuestas al cliente o comentarios internos del caso. <br/>La ventaja de una respuesta predefinida es que al seleccionar una esta Pegar\u00e1 en el cuadro de respuesta el texto reemplazando las variables del caso en proceso por los datos deseados con s\u00f3lo un clic, lo que elimina la molestia de tener que volver a escribir o copiar/pegar texto y datos repetitivos.
@@ -1512,8 +1515,11 @@ ListUsuarioTitle_activo=Activo
 ListUsuarioTitle_supervisor=Supervisor
 ListUsuarioTitle_idGrupo=Grupo
 ListUsuarioTitle_idCargo=Cargo
-LoginUsuario=Entrar
-LoginTitle= Ingreso a sistema
+LoginUsuario=Iniciar sesi\u00f3n
+LoginTitleForgot=Reestablecer contrase\u00f1a
+LoginUsuarioForgotBtn=Reestablecer contrase\u00f1a
+ForgotMsg=Al Reestablecer la contrase\u00f1a ud. recibir\u00e1 una contrase\u00f1a nueva en su correo electronico registrado en el sistema. Se recomienda cambiarla.
+LoginTitle=Accede a tu cuenta GoDesk
 CerrarCaso=\u00bfEst\u00e1 seguro que quiere cerrar el caso?
 ReabrirCaso=\u00bfEst\u00e1 seguro que quiere reabrir el caso?
 EliminarCaso=\u00bfEst\u00e1 seguro que desea eliminar el caso?
@@ -2750,3 +2756,36 @@ ListModeloProductoTitle_nombre=Nombre
 ListModeloProductoTitle_descripcion=Descripcion
 ListModeloProductoTitle_idProducto=IdProducto
 ListModeloProductoTitle_idComponente=IdComponente
+
+ayudaCustomFields=...ayudaCustomFields...
+
+ListCustomFieldTitle=Campos personalizados
+ListCustomFieldEmpty=No existen Campos personalizados
+CustomFieldDestroyLink=Eliminar
+CustomFieldEditLink=Editar
+CustomFieldViewLink=View
+CustomFieldCreateLink=Nuevo Campo personalizado
+CustomField_watermark_customFieldPK_fieldKey=mi_nuevo_campo_personalizado
+CustomField_customFieldPK_entity=Tipo de Entidad
+CustomField_watermark_label=Mi nuevo campo personalizado
+CustomField_customFieldPK_fieldKey=Id campo
+CustomField_label=Nombre
+CustomField_fieldType=Tipo de dato
+CustomField_required=Requerido
+CustomField_tipoCaso=Tipos de Caso
+CustomField_ListFieldType_options=Opciones de la lista
+CustomField_visibleToCustomers=Visible a los Clientes
+CustomFieldRequiredMessage_customFieldPK_fieldKey=Debe indicar el Id del campo
+CustomFieldRequiredMessage_label=Debe indicar Nombre del campo
+CustomFieldRequiredMessage_fieldType=Debe indicar el Tipo de dato del campo
+CustomFieldRequiredMessage_required=Debe indicar si desea que el campo sea Requerido
+CustomFieldRequiredMessage_visibleToAgents=Debe indicar si desea que el campo sea Visible a los Agentes
+CustomFieldRequiredMessage_visibleToCustomers=Debe indicar si desea que el campo sea  Visible a los Clientes
+EditCustomFieldTitle=Editar Campo personalizado
+ViewCustomFieldTitle=Info Campo personalizado
+CreateCustomFieldTitle=Nuevo Campo personalizado
+CustomFieldCreated=CustomField was successfully created.
+CustomFieldUpdated=CustomField was successfully updated.
+CustomFieldDeleted=CustomField was successfully deleted.
+CustomField_tooltip_label=This is used to label the custom field in the Agent or Client View
+CustomField_tooltip_customFieldPK_fieldKey=This is used to reference the custom field throughout the product. It should not contain any spaces.
