--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -81,6 +81,10 @@
     <listener>
         <listener-class>com.itcs.helpdesk.webapputils.AppStarter</listener-class>
     </listener>
+     <listener>
+        <listener-class>com.itcs.helpdesk.webapputils.UserSessionListener</listener-class>
+    </listener>
+    
     <servlet-mapping>
         <servlet-name>TagListServlet</servlet-name>
         <url-pattern>/TagListServlet</url-pattern>
@@ -118,6 +122,14 @@
     <context-param>
         <param-name>primefaces.THEME</param-name>
         <param-value>#{UserSessionBean.theme}</param-value>
+    </context-param>
+      <context-param>
+        <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>
+        <param-value>6LfwZwoAAAAAAI-oUHpdvRnkMfu9fXQHxc0P7IBu</param-value>
+    </context-param>
+    <context-param>
+        <param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>
+        <param-value>6LfwZwoAAAAAAEhRyntKF1PBzysAJLzqp2v-GMRR</param-value>
     </context-param>
     <mime-mapping>
         <extension>woff</extension>
