se puede editar tema y descripcion del caso

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,5 +1,6 @@
 Cancel=Cancelar
 Save=Guardar
+goBack=Volver
 
 adminClippings=Administrar Respuestas Predefinidas
 clippingDesc=Respuesta Predefinida
