--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,6 +1,9 @@
 Cancel=Cancelar
 Save=Guardar
 goBack=Volver
+EmptyList=No se ha encontrado ning\u00fan registro
+CreateBtnTitle=Nuevo
+SessionDurationFormat=Gets the value as a String in the ISO8601 duration format using hours, minutes and seconds (including fractional milliseconds). For example, "PT6H3M7S" represents 6 hours, 3 minutes, 7 seconds.
 
 adminClippings=Administrar Respuestas Predefinidas
 clippingDesc=Respuesta Predefinida
@@ -88,6 +91,8 @@ respuestaCasoOK=Se ha enviado respuesta al cliente.
 respuestaCasoNOOK=No ha sido posible realizar el env\u00edo.
 tomarcasoOK=Se ha tomado el caso.
 tomarcasoNOOK=NO se ha podido tomar el caso.
+
+SessionsTitle=Log de Sesiones de Usuario
 
 AccionCreated=Accion was successfully created.
 AccionUpdated=Accion was successfully updated.
