--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,3 +1,4 @@
+emptyViews=No hay vistas para mostrar
 Cancel=Cancelar
 Save=Guardar
 goBack=Volver
@@ -2276,6 +2277,7 @@ VistaCreated=La Vista fue creada exit\u00f3samente.
 VistaUpdated=La Vista fue actualizada exit\u00f3samente.
 VistaDeleted=La Vista fue borrada.
 CreateVistaTitle=Crear Nueva Vista
+EditVistaTitle=Editar Vista
 VistaSaveLink=Guardar
 VistaShowAllLink=Ver Todas las Vistas
 VistaIndexLink=Index
@@ -2765,7 +2767,7 @@ ListModeloProductoTitle_descripcion=Descripcion
 ListModeloProductoTitle_idProducto=IdProducto
 ListModeloProductoTitle_idComponente=IdComponente
 
-ayudaCustomFields=...ayudaCustomFields...
+ayudaCustomFields=Los campos personalizados proveen opciones adicinales para la clasificaci\u00f3n y el an\u00e1lisis, ya que permiten obtener m\u00e1s informaci\u00f3n de los casos, clientes, etc.
 
 ListCustomFieldTitle=Campos personalizados
 ListCustomFieldEmpty=No existen Campos personalizados
