--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,3 +1,6 @@
+casosTitle=Casos
+agendaTitle=Agenda Glogal
+agendaMenuTitle=Filtros
 emptyViews=No hay vistas para mostrar
 Cancel=Cancelar
 Save=Guardar
@@ -350,6 +353,7 @@ ViewCanalLabel_nombre=Nombre:
 ViewCanalTitle_nombre=Nombre
 ViewCanalLabel_descripcion=Descripci\u00f3n:
 ViewCanalTitle_descripcion=Descripci\u00f3n
+ListCanalMenuTitle=Canales
 ListCanalTitle=Lista de Canales
 ListCanalEmpty=(No se han encontrado elementos)
 ListCanalDestroyLink=Eliminar
@@ -1425,7 +1429,6 @@ UsuarioUpdated=Usuario ha sido actualizado con \u00e9xito.
 UsuarioDeleted=Usuario ha sido borrado con \u00e9xito.
 CreateUsuarioTitle= Nuevo Usuario
 CreateUsuarioSaveLink=Guardar
-CreateUsuarioShowAllLink=Todos los Usuarios
 CreateUsuarioIndexLink=Index
 CreateUsuarioLabel_idUsuario=Usuario:
 CreateUsuarioRequiredMessage_idUsuario=El campo Usuario es requerido.
@@ -1485,7 +1488,7 @@ ViewUsuarioTitleCargoFuncion= Supervisor y Cargo
 ViewUsuarioDestroyLink=Eliminar
 ViewUsuarioEditLink=Editar
 ViewUsuarioCreateLink=Crear Nuevo Usuario
-ViewUsuarioShowAllLink=Todos los Usuarios
+
 ViewUsuarioIndexLink=Index
 ViewUsuarioLabel_idUsuario=Usuario:
 ViewUsuarioTitle_idUsuario=Usuario
@@ -1602,7 +1605,7 @@ EditEmailClienteRequiredMessage_emailCliente=Ingrese El Email del Cliente.
 EditEmailClienteTitle_emailCliente=EmailCliente
 EditEmailClienteLabel_idCliente=IdCliente:
 EditEmailClienteTitle_idCliente=IdCliente
-ViewEmailClienteTitle=Ver
+ViewEmailClienteTitle=Detalle del cliente
 ViewEmailClienteDestroyLink=Eliminar
 ViewEmailClienteEditLink=Editar
 ViewEmailClienteCreateLink=Crear Nuevo Cliente
