--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,3 +1,5 @@
+yes=Si
+no=No
 myAccountTitle=Mi cuenta
 myAccountMenuTitle=Mi cuenta
 casosTitle=Casos
@@ -6,10 +8,13 @@ agendaMenuTitle=Filtros
 emptyViews=No hay vistas para mostrar
 Cancel=Cancelar
 Save=Guardar
+View=Ver
 goBack=Volver
 EmptyList=No se ha encontrado ning\u00fan registro
 CreateBtnTitle=Nuevo
 SessionDurationFormat=Gets the value as a String in the ISO8601 duration format using hours, minutes and seconds (including fractional milliseconds). For example, "PT6H3M7S" represents 6 hours, 3 minutes, 7 seconds.
+
+AreaCanalSalida=Canal de salida por defecto
 
 adminClippings=Administrar Respuestas Predefinidas
 clippingDesc=Respuesta Predefinida
@@ -872,7 +877,7 @@ EditGrupoLabel_descripcion=Descripci\u00f3n:
 EditGrupoTitle_descripcion=Descripci\u00f3n
 EditGrupoLabel_idArea=Area:
 EditGrupoTitle_idArea=Area
-ViewGrupoTitle=Ver
+ViewGrupoTitle=Detalles del Grupo
 ViewGrupoDestroyLink=Eliminar
 ViewGrupoEditLink=Editar
 ViewGrupoCreateLink=Crear Nuevo Grupo
@@ -1552,10 +1557,14 @@ ListClienteTitle_fono1=Fono1
 ListClienteTitle_fono2=Fono2
 ListClienteTitle_dirParticular=DirParticular
 ListClienteTitle_dirComercial=DirComercial
-ClienteCreated=Cliente was successfully created.
-ClienteUpdated=Cliente was successfully updated.
-ClienteDeleted=Cliente was successfully deleted.
-CreateClienteTitle=Create New Cliente
+#ClienteCreated=Cliente was successfully created.
+#ClienteUpdated=Cliente was successfully updated.
+#ClienteDeleted=Cliente was successfully deleted.
+#CreateClienteTitle=Create New Cliente
+ClienteCreated=Cliente fue creado exitosamente.
+ClienteUpdated=Cliente fue actualizado exitosamente.
+ClienteDeleted=Cliente fue eliminado exitosamente.
+CreateClienteTitle=Crear nuevo cliente
 CreateClienteSaveLink=Guardar
 CreateClienteShowAllLink=Show All Cliente Items
 CreateClienteIndexLink=Index
@@ -2230,12 +2239,12 @@ ListAreaTitle_emailAcusederecibo=EmailAcusederecibo
 ListAreaTitle_subjectRespAutomatica=SubjectRespAutomatica
 ListAreaTitle_textoRespAutomatica=TextoRespAutomatica
 ListAreaTitle_textoRespCaso=TextoRespCaso
-AreaCreated=Area ha sido creado con \u00e9xito.
-AreaUpdated=Area ha sido actualizado con \u00e9xito.
-AreaDeleted=Area ha sido borrado con \u00e9xito.
+AreaCreated=\u00c1rea ha sido creada con \u00e9xito.
+AreaUpdated=Area ha sido actualizada con \u00e9xito.
+AreaDeleted=Area ha sido borrada con \u00e9xito.
 CreateAreaTitle=Crear Nueva \u00c1rea
 CreateAreaSaveLink=Guardar
-CreateAreaShowAllLink=Todas las \u00c1reas
+CreateAreaShowAllLink=Listar Todas las \u00c1reas
 CreateAreaIndexLink=Index
 CreateAreaLabel_idArea=Area:
 CreateAreaRequiredMessage_idArea=El campo \u00c1rea es requerido.
