preparing deploy + working on new dashboard
not ready yet

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,3 +1,7 @@
+SelectOneMessage=Select One...
+Home=Home
+Maintenance=Maintenance
+AppName=Godesk
 yes=Si
 no=No
 myAccountTitle=Mi cuenta
@@ -9,6 +13,10 @@ emptyViews=No hay vistas para mostrar
 Cancel=Cancelar
 Save=Guardar
 View=Ver
+Create=Create
+Edit=Edit
+Delete=Delete
+Close=Close
 goBack=Volver
 EmptyList=No se ha encontrado ning\u00fan registro
 CreateBtnTitle=Nuevo
@@ -2813,3 +2821,181 @@ CustomFieldUpdated=CustomField was successfully updated.
 CustomFieldDeleted=CustomField was successfully deleted.
 CustomField_tooltip_label=This is used to label the custom field in the Agent or Client View
 CustomField_tooltip_customFieldPK_fieldKey=This is used to reference the custom field throughout the product. It should not contain any spaces.
+
+ReportChartCreated=ReportChart was successfully created.
+ReportChartUpdated=ReportChart was successfully updated.
+ReportChartDeleted=ReportChart was successfully deleted.
+CreateReportChartTitle=Create New ReportChart
+CreateReportChartSaveLink=Save
+CreateReportChartShowAllLink=Show All ReportChart Items
+CreateReportChartIndexLink=Index
+CreateReportChartLabel_idChartReport=IdChartReport:
+CreateReportChartRequiredMessage_idChartReport=The IdChartReport field is required.
+CreateReportChartTitle_idChartReport=IdChartReport
+CreateReportChartLabel_titulo=Titulo:
+CreateReportChartTitle_titulo=Titulo
+CreateReportChartLabel_nombre=Nombre:
+CreateReportChartRequiredMessage_nombre=The Nombre field is required.
+CreateReportChartTitle_nombre=Nombre
+CreateReportChartLabel_descripcion=Descripcion:
+CreateReportChartTitle_descripcion=Descripcion
+CreateReportChartLabel_chartType=ChartType:
+CreateReportChartRequiredMessage_chartType=The ChartType field is required.
+CreateReportChartTitle_chartType=ChartType
+CreateReportChartLabel_baseEntityType=BaseEntityType:
+CreateReportChartRequiredMessage_baseEntityType=The BaseEntityType field is required.
+CreateReportChartTitle_baseEntityType=BaseEntityType
+CreateReportChartLabel_visibleToAll=VisibleToAll:
+CreateReportChartRequiredMessage_visibleToAll=The VisibleToAll field is required.
+CreateReportChartTitle_visibleToAll=VisibleToAll
+CreateReportChartLabel_columnIndex=ColumnIndex:
+CreateReportChartTitle_columnIndex=ColumnIndex
+CreateReportChartLabel_itemIndex=ItemIndex:
+CreateReportChartTitle_itemIndex=ItemIndex
+CreateReportChartLabel_idArea=IdArea:
+CreateReportChartTitle_idArea=IdArea
+CreateReportChartLabel_idCampoBase=IdCampoBase:
+CreateReportChartTitle_idCampoBase=IdCampoBase
+CreateReportChartLabel_idComparador=IdComparador:
+CreateReportChartTitle_idComparador=IdComparador
+CreateReportChartLabel_valor=Valor:
+CreateReportChartTitle_valor=Valor
+CreateReportChartLabel_valor2=Valor2:
+CreateReportChartTitle_valor2=Valor2
+CreateReportChartLabel_valorLabel=ValorLabel:
+CreateReportChartTitle_valorLabel=ValorLabel
+CreateReportChartLabel_valor2Label=Valor2Label:
+CreateReportChartTitle_valor2Label=Valor2Label
+CreateReportChartLabel_fechaCreacion=FechaCreacion:
+CreateReportChartTitle_fechaCreacion=FechaCreacion
+CreateReportChartLabel_fechaModif=FechaModif:
+CreateReportChartTitle_fechaModif=FechaModif
+CreateReportChartLabel_idUsuarioCreatedby=IdUsuarioCreatedby:
+CreateReportChartRequiredMessage_idUsuarioCreatedby=The IdUsuarioCreatedby field is required.
+CreateReportChartTitle_idUsuarioCreatedby=IdUsuarioCreatedby
+CreateReportChartLabel_idGrupo=IdGrupo:
+CreateReportChartTitle_idGrupo=IdGrupo
+EditReportChartTitle=Edit ReportChart
+EditReportChartSaveLink=Save
+EditReportChartViewLink=View
+EditReportChartShowAllLink=Show All ReportChart Items
+EditReportChartIndexLink=Index
+EditReportChartLabel_idChartReport=IdChartReport:
+EditReportChartRequiredMessage_idChartReport=The IdChartReport field is required.
+EditReportChartTitle_idChartReport=IdChartReport
+EditReportChartLabel_titulo=Titulo:
+EditReportChartTitle_titulo=Titulo
+EditReportChartLabel_nombre=Nombre:
+EditReportChartRequiredMessage_nombre=The Nombre field is required.
+EditReportChartTitle_nombre=Nombre
+EditReportChartLabel_descripcion=Descripcion:
+EditReportChartTitle_descripcion=Descripcion
+EditReportChartLabel_chartType=ChartType:
+EditReportChartRequiredMessage_chartType=The ChartType field is required.
+EditReportChartTitle_chartType=ChartType
+EditReportChartLabel_baseEntityType=BaseEntityType:
+EditReportChartRequiredMessage_baseEntityType=The BaseEntityType field is required.
+EditReportChartTitle_baseEntityType=BaseEntityType
+EditReportChartLabel_visibleToAll=VisibleToAll:
+EditReportChartRequiredMessage_visibleToAll=The VisibleToAll field is required.
+EditReportChartTitle_visibleToAll=VisibleToAll
+EditReportChartLabel_columnIndex=ColumnIndex:
+EditReportChartTitle_columnIndex=ColumnIndex
+EditReportChartLabel_itemIndex=ItemIndex:
+EditReportChartTitle_itemIndex=ItemIndex
+EditReportChartLabel_idArea=IdArea:
+EditReportChartTitle_idArea=IdArea
+EditReportChartLabel_idCampoBase=IdCampoBase:
+EditReportChartTitle_idCampoBase=IdCampoBase
+EditReportChartLabel_idComparador=IdComparador:
+EditReportChartTitle_idComparador=IdComparador
+EditReportChartLabel_valor=Valor:
+EditReportChartTitle_valor=Valor
+EditReportChartLabel_valor2=Valor2:
+EditReportChartTitle_valor2=Valor2
+EditReportChartLabel_valorLabel=ValorLabel:
+EditReportChartTitle_valorLabel=ValorLabel
+EditReportChartLabel_valor2Label=Valor2Label:
+EditReportChartTitle_valor2Label=Valor2Label
+EditReportChartLabel_fechaCreacion=FechaCreacion:
+EditReportChartTitle_fechaCreacion=FechaCreacion
+EditReportChartLabel_fechaModif=FechaModif:
+EditReportChartTitle_fechaModif=FechaModif
+EditReportChartLabel_idUsuarioCreatedby=IdUsuarioCreatedby:
+EditReportChartRequiredMessage_idUsuarioCreatedby=The IdUsuarioCreatedby field is required.
+EditReportChartTitle_idUsuarioCreatedby=IdUsuarioCreatedby
+EditReportChartLabel_idGrupo=IdGrupo:
+EditReportChartTitle_idGrupo=IdGrupo
+ViewReportChartTitle=View
+ViewReportChartDestroyLink=Destroy
+ViewReportChartEditLink=Edit
+ViewReportChartCreateLink=Create New ReportChart
+ViewReportChartShowAllLink=Show All ReportChart Items
+ViewReportChartIndexLink=Index
+ViewReportChartLabel_idChartReport=IdChartReport:
+ViewReportChartTitle_idChartReport=IdChartReport
+ViewReportChartLabel_titulo=Titulo:
+ViewReportChartTitle_titulo=Titulo
+ViewReportChartLabel_nombre=Nombre:
+ViewReportChartTitle_nombre=Nombre
+ViewReportChartLabel_descripcion=Descripcion:
+ViewReportChartTitle_descripcion=Descripcion
+ViewReportChartLabel_chartType=ChartType:
+ViewReportChartTitle_chartType=ChartType
+ViewReportChartLabel_baseEntityType=BaseEntityType:
+ViewReportChartTitle_baseEntityType=BaseEntityType
+ViewReportChartLabel_visibleToAll=VisibleToAll:
+ViewReportChartTitle_visibleToAll=VisibleToAll
+ViewReportChartLabel_columnIndex=ColumnIndex:
+ViewReportChartTitle_columnIndex=ColumnIndex
+ViewReportChartLabel_itemIndex=ItemIndex:
+ViewReportChartTitle_itemIndex=ItemIndex
+ViewReportChartLabel_idArea=IdArea:
+ViewReportChartTitle_idArea=IdArea
+ViewReportChartLabel_idCampoBase=IdCampoBase:
+ViewReportChartTitle_idCampoBase=IdCampoBase
+ViewReportChartLabel_idComparador=IdComparador:
+ViewReportChartTitle_idComparador=IdComparador
+ViewReportChartLabel_valor=Valor:
+ViewReportChartTitle_valor=Valor
+ViewReportChartLabel_valor2=Valor2:
+ViewReportChartTitle_valor2=Valor2
+ViewReportChartLabel_valorLabel=ValorLabel:
+ViewReportChartTitle_valorLabel=ValorLabel
+ViewReportChartLabel_valor2Label=Valor2Label:
+ViewReportChartTitle_valor2Label=Valor2Label
+ViewReportChartLabel_fechaCreacion=FechaCreacion:
+ViewReportChartTitle_fechaCreacion=FechaCreacion
+ViewReportChartLabel_fechaModif=FechaModif:
+ViewReportChartTitle_fechaModif=FechaModif
+ViewReportChartLabel_idUsuarioCreatedby=IdUsuarioCreatedby:
+ViewReportChartTitle_idUsuarioCreatedby=IdUsuarioCreatedby
+ViewReportChartLabel_idGrupo=IdGrupo:
+ViewReportChartTitle_idGrupo=IdGrupo
+ListReportChartTitle=List
+ListReportChartEmpty=(No ReportChart Items Found)
+ListReportChartDestroyLink=Destroy
+ListReportChartEditLink=Edit
+ListReportChartViewLink=View
+ListReportChartCreateLink=Create New ReportChart
+ListReportChartIndexLink=Index
+ListReportChartTitle_idChartReport=IdChartReport
+ListReportChartTitle_titulo=Titulo
+ListReportChartTitle_nombre=Nombre
+ListReportChartTitle_descripcion=Descripcion
+ListReportChartTitle_chartType=ChartType
+ListReportChartTitle_baseEntityType=BaseEntityType
+ListReportChartTitle_visibleToAll=VisibleToAll
+ListReportChartTitle_columnIndex=ColumnIndex
+ListReportChartTitle_itemIndex=ItemIndex
+ListReportChartTitle_idArea=IdArea
+ListReportChartTitle_idCampoBase=IdCampoBase
+ListReportChartTitle_idComparador=IdComparador
+ListReportChartTitle_valor=Valor
+ListReportChartTitle_valor2=Valor2
+ListReportChartTitle_valorLabel=ValorLabel
+ListReportChartTitle_valor2Label=Valor2Label
+ListReportChartTitle_fechaCreacion=FechaCreacion
+ListReportChartTitle_fechaModif=FechaModif
+ListReportChartTitle_idUsuarioCreatedby=IdUsuarioCreatedby
+ListReportChartTitle_idGrupo=IdGrupo
