Fix lectura correo

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -24,7 +24,7 @@ visibleAlCliente=Visible al cliente
 responderAOtroCorreo=Responder a otro email
 etiquetaDestinatarioRespuestaCaso=Para
 textoPredefinido=Respuesta r\u00e1pida
-cambiarSLA=Cambiar SLA
+cambiarSLA=Proximo vencimiento
 adjuntarArchivosARespuesta=Adjuntar Archivos
 cambiarSubEstado=Cambiar Estado del caso
 inbox=/script/index.xhtml
