--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -5,7 +5,8 @@
 # Configure Main Scheduler Properties  
 #============================================================================
 
-org.quartz.scheduler.instanceName = BrotecIcafal_Scheduler
+#org.quartz.scheduler.instanceName = BrotecIcafal_Scheduler
+org.quartz.scheduler.instanceName = Godesk_Quartz_Scheduler
 org.quartz.scheduler.instanceId = AUTO
 
 #============================================================================
@@ -60,4 +61,8 @@ org.quartz.jobStore.clusterCheckinInterval = 60000
 #============================================================================
 
 #org.quartz.dataSource.nonManagedTxDs.jndiURL=jdbc/brotecnonManagedTXDS
+#brotec ds
 org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
+#godesk ds
+#org.quartz.dataSource.godeskds.jndiURL=jdbc/godesk_db_ds
+
