Mejoras merge, y ocultar contenido

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -568,6 +568,7 @@ EditCasoLabel_idEstado=Estado:
 EditCasoTitle_idEstado=Estado
 EditCasoLabel_idCasoPadre=Caso Padre:
 EditCasoTitle_idCasoPadre=Caso Padre
+EditCasoLabel_idCasoCombinado=Combinado en caso:
 EditCasoLabel_idCasoRel=CasoRel:
 EditCasoTitle_idCasoRel=CasoRel
 EditCasoLabel_idCanal=Canal:
