--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -65,4 +65,5 @@ org.quartz.jobStore.clusterCheckinInterval = 60000
 org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
 #godesk ds
 #org.quartz.dataSource.godeskds.jndiURL=jdbc/godesk_db_ds
-
+#beltec ds
+#org.quartz.dataSource.godeskds.jndiURL=jdbc/beltec
