product bulk import fixes

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -2574,8 +2574,8 @@ EditSubComponenteTitle_descripcion=Descripcion
 EditSubComponenteLabel_idComponente=IdComponente:
 EditSubComponenteRequiredMessage_idComponente=The IdComponente field is required.
 EditSubComponenteTitle_idComponente=IdComponente
-EditSubComponenteLabel_direccionMunicipal=Direcci\u00f3n Municipal:
-EditSubComponenteTitle_direccionMunicipal=Direcci\u00f3n Municipal
+EditSubComponenteLabel_direccionMunicipal=Direcci\u00f3n:
+EditSubComponenteTitle_direccionMunicipal=Direcci\u00f3n
 EditSubComponenteLabel_fechaReserva=Fecha de Reserva:
 EditSubComponenteTitle_fechaReserva=Fecha de Reserva
 EditSubComponenteLabel_fechaPromesa=Fecha de Promesa:
