--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -67,3 +67,6 @@ org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
 #org.quartz.dataSource.godeskds.jndiURL=jdbc/godesk_db_ds
 #beltec ds
 #org.quartz.dataSource.godeskds.jndiURL=jdbc/beltec
+#betterlife
+#org.quartz.dataSource.godeskds.jndiURL=jdbc/betterlife
+
