--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -62,8 +62,10 @@ org.quartz.jobStore.clusterCheckinInterval = 60000
 
 #org.quartz.dataSource.nonManagedTxDs.jndiURL=jdbc/brotecnonManagedTXDS
 #brotec ds
-org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
+#org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
 #godesk ds
 #org.quartz.dataSource.godeskds.jndiURL=jdbc/godesk_db_ds
 #beltec ds
-#org.quartz.dataSource.godeskds.jndiURL=jdbc/beltec
+org.quartz.dataSource.godeskds.jndiURL=jdbc/beltec
+#monte-elqui ds
+#org.quartz.dataSource.godeskds.jndiURL=jdbc/monte_elqui
