Eliminar Relaciones del caso
Se crea una nueva opción para poder eliminar relaciones de los casos.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -82,6 +82,11 @@ casorel.ok=Caso relacionado con \u00e9xito.
 casorel.nook=No se ha podido relacionar el caso.
 casorel.notfound=No se ha encontrado el caso especificado.
 
+#Eliminar Casos relacionados.
+DeletecasoRel.ok=Relaci\u00f3n del caso eliminada con \u00e9xito.
+DeletecasoRel.nook=No se ha podido eliminar la relaci\u00f3n del caso.
+DeletecasoRel.notfound=No se ha encontrado la relaci\u00f3n del caso especificado.
+
 # Attachment
 attachment.error=No se pudo subir el archivo.
 attachment.existe=El archivo ya existe.
