--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,11 @@
             <version>1</version>
         </dependency>
         <dependency>
+            <groupId>com.itcs.jpautils</groupId>
+            <artifactId>JPAUtils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
