Se agrega jndiURL betterlife

--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -69,3 +69,5 @@ org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
 #org.quartz.dataSource.godeskds.jndiURL=jdbc/beltec
 #monte-elqui ds
 #org.quartz.dataSource.godeskds.jndiURL=jdbc/monte_elqui
+#betterlife
+#org.quartz.dataSource.godeskds.jndiURL=jdbc/betterlife
