--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
 
     <dependencies>
         
+           <dependency>
+            <groupId>MFontAwesome</groupId>
+            <artifactId>mfontawesome</artifactId>
+            <version>1</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>font-awesome</artifactId>
