--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -193,4 +193,12 @@
         <extension>ttf</extension>
         <mime-type>application/font-ttf</mime-type>
     </mime-mapping>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/faces/public/error.xhtml</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/faces/public/e404.xhtml</location>
+    </error-page>
 </web-app>
