--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -59,10 +59,9 @@ org.quartz.jobStore.clusterCheckinInterval = 60000
 #============================================================================
 # Configure Datasources  
 #============================================================================
-
-#org.quartz.dataSource.nonManagedTxDs.jndiURL=jdbc/brotecnonManagedTXDS
+org.quartz.dataSource.godeskds.jndiURL=jdbc/quartzds4godesk
 #brotec ds
-org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
+#org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
 #godesk ds
 #org.quartz.dataSource.godeskds.jndiURL=jdbc/godesk_db_ds
 #beltec ds
