--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -59,6 +59,8 @@ org.quartz.jobStore.clusterCheckinInterval = 60000
 #============================================================================
 # Configure Datasources  
 #============================================================================
+org.quartz.dataSource.godeskds.jndiURL=jdbc/helpdesk_dev_ds
+
 #brotec ds
 #org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
 #godesk ds
