implemented mantenedor de resources!

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -3007,3 +3007,58 @@ ListReportChartTitle_fechaCreacion=FechaCreacion
 ListReportChartTitle_fechaModif=FechaModif
 ListReportChartTitle_idUsuarioCreatedby=IdUsuarioCreatedby
 ListReportChartTitle_idGrupo=IdGrupo
+ResourceCreated=Resource was successfully created.
+ResourceUpdated=Resource was successfully updated.
+ResourceDeleted=Resource was successfully deleted.
+CreateResourceTitle=Create New Resource
+CreateResourceSaveLink=Save
+CreateResourceShowAllLink=Show All Resource Items
+CreateResourceIndexLink=Index
+CreateResourceLabel_idResource=IdResource:
+CreateResourceRequiredMessage_idResource=The IdResource field is required.
+CreateResourceTitle_idResource=IdResource
+CreateResourceLabel_nombre=Nombre:
+CreateResourceTitle_nombre=Nombre
+CreateResourceLabel_descripcion=Descripcion:
+CreateResourceTitle_descripcion=Descripcion
+CreateResourceLabel_tipo=Tipo:
+CreateResourceTitle_tipo=Tipo
+EditResourceTitle=Edit Resource
+EditResourceSaveLink=Save
+EditResourceViewLink=View
+EditResourceShowAllLink=Show All Resource Items
+EditResourceIndexLink=Index
+EditResourceLabel_idResource=IdResource:
+EditResourceRequiredMessage_idResource=The IdResource field is required.
+EditResourceTitle_idResource=IdResource
+EditResourceLabel_nombre=Nombre:
+EditResourceTitle_nombre=Nombre
+EditResourceLabel_descripcion=Descripcion:
+EditResourceTitle_descripcion=Descripcion
+EditResourceLabel_tipo=Tipo:
+EditResourceTitle_tipo=Tipo
+ViewResourceTitle=View
+ViewResourceDestroyLink=Destroy
+ViewResourceEditLink=Edit
+ViewResourceCreateLink=Create New Resource
+ViewResourceShowAllLink=Show All Resource Items
+ViewResourceIndexLink=Index
+ViewResourceLabel_idResource=IdResource:
+ViewResourceTitle_idResource=IdResource
+ViewResourceLabel_nombre=Nombre:
+ViewResourceTitle_nombre=Nombre
+ViewResourceLabel_descripcion=Descripcion:
+ViewResourceTitle_descripcion=Descripcion
+ViewResourceLabel_tipo=Tipo:
+ViewResourceTitle_tipo=Tipo
+ListResourceTitle=List
+ListResourceEmpty=(No Resource Items Found)
+ListResourceDestroyLink=Destroy
+ListResourceEditLink=Edit
+ListResourceViewLink=View
+ListResourceCreateLink=Create New Resource
+ListResourceIndexLink=Index
+ListResourceTitle_idResource=IdResource
+ListResourceTitle_nombre=Nombre
+ListResourceTitle_descripcion=Descripcion
+ListResourceTitle_tipo=Tipo
